src/sintatic/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARROW
    BITWISE_NOT
    DOUBLEHASH
    ENUM
    LBRACKET
    NEWLINE
    NOT
    POWER
    RBRACKET
    SIZEOF
    TERNARY

Grammar

Rule 0     S' -> programa
Rule 1     programa -> diretiva_preprocessador_opcional lista_declaracao_opcional lista_funcoes
Rule 2     diretiva_preprocessador_opcional -> lista_diretiva_preprocessador
Rule 3     diretiva_preprocessador_opcional -> vazio
Rule 4     lista_diretiva_preprocessador -> diretiva_preprocessador
Rule 5     diretiva_preprocessador -> include_diretiva
Rule 6     diretiva_preprocessador -> define_diretiva
Rule 7     include_diretiva -> HASH INCLUDE LIBRARY
Rule 8     define_diretiva -> HASH DEFINE ID expressao
Rule 9     define_diretiva -> HASH DEFINE ID
Rule 10    lista_declaracao_opcional -> lista_declaracao
Rule 11    lista_declaracao -> lista_declaracao declaracao
Rule 12    lista_declaracao -> vazio
Rule 13    lista_funcoes -> funcao
Rule 14    lista_funcoes -> lista_funcoes funcao
Rule 15    funcao -> funcao_main
Rule 16    funcao -> tipo_especificador ID LPAREN lista_parametros RPAREN declaracao_chaves
Rule 17    funcao -> tipo_especificador ID LPAREN RPAREN declaracao_chaves
Rule 18    funcao_main -> tipo_especificador MAIN LPAREN RPAREN declaracao_chaves
Rule 19    lista_parametros -> parametro
Rule 20    lista_parametros -> lista_parametros COMMA parametro
Rule 21    lista_parametros -> vazio
Rule 22    parametro -> tipo_especificador ID
Rule 23    declaracao_chaves -> LBRACE lista_instrucoes RBRACE
Rule 24    lista_instrucoes -> instrucao
Rule 25    lista_instrucoes -> lista_instrucoes instrucao
Rule 26    instrucao -> declaracao
Rule 27    instrucao -> atribuicao
Rule 28    instrucao -> if_instrucao
Rule 29    instrucao -> while_instrucao
Rule 30    instrucao -> return_instrucao
Rule 31    instrucao -> declaracao_chaves
Rule 32    instrucao -> chamada_funcao SEMICOLON
Rule 33    instrucao -> break_instrucao
Rule 34    instrucao -> continue_instrucao
Rule 35    instrucao -> for_instrucao
Rule 36    instrucao -> switch_instrucao
Rule 37    instrucao -> expressao SEMICOLON
Rule 38    declaracao -> tipo_especificador init_lista_declarador SEMICOLON
Rule 39    declaracao -> typedef_declaracao
Rule 40    declaracao -> declaracao_struct
Rule 41    typedef_declaracao -> TYPEDEF declaracao_struct
Rule 42    declaracao_struct -> STRUCT id_opcional LBRACE struct_membros RBRACE ID SEMICOLON
Rule 43    struct_membros -> struct_membro
Rule 44    struct_membros -> struct_membros struct_membro
Rule 45    struct_membro -> tipo_especificador ID SEMICOLON
Rule 46    id_opcional -> ID
Rule 47    id_opcional -> vazio
Rule 48    init_lista_declarador -> init_declarador
Rule 49    init_lista_declarador -> init_lista_declarador COMMA init_declarador
Rule 50    init_declarador -> ID
Rule 51    init_declarador -> ID EQUALS expressao
Rule 52    init_declarador -> ID EQUALS LBRACE lista_inicializador RBRACE
Rule 53    lista_inicializador -> expressao
Rule 54    lista_inicializador -> lista_inicializador COMMA expressao
Rule 55    tipo_especificador -> tipo_especificador_nao_vazio tipos_base
Rule 56    tipo_especificador -> tipo_especificador_nao_vazio ID
Rule 57    tipo_especificador -> ID
Rule 58    tipo_especificador_nao_vazio -> tipo_previo_especificador
Rule 59    tipos_base -> INT
Rule 60    tipos_base -> CHAR
Rule 61    tipos_base -> FLOAT
Rule 62    tipos_base -> DOUBLE
Rule 63    tipos_base -> VOID
Rule 64    tipo_previo_especificador -> CONST
Rule 65    tipo_previo_especificador -> AUTO
Rule 66    tipo_previo_especificador -> VOLATILE
Rule 67    tipo_previo_especificador -> REGISTER
Rule 68    tipo_previo_especificador -> STATIC
Rule 69    tipo_previo_especificador -> UNSIGNED
Rule 70    tipo_previo_especificador -> SHORT
Rule 71    tipo_previo_especificador -> LONG
Rule 72    tipo_previo_especificador -> vazio
Rule 73    atribuicao -> ID EQUALS expressao SEMICOLON
Rule 74    expressao -> termo
Rule 75    expressao -> expressao PLUS termo
Rule 76    expressao -> expressao MINUS termo
Rule 77    expressao -> expressao LT termo
Rule 78    expressao -> expressao LE termo
Rule 79    expressao -> expressao GT termo
Rule 80    expressao -> expressao GE termo
Rule 81    expressao -> expressao NE termo
Rule 82    expressao -> expressao COMPARATOR termo
Rule 83    expressao -> expressao BITWISE_AND termo
Rule 84    expressao -> expressao BITWISE_OR termo
Rule 85    expressao -> expressao BITWISE_XOR termo
Rule 86    expressao -> expressao AND termo
Rule 87    expressao -> expressao OR termo
Rule 88    expressao -> expressao DOT ID
Rule 89    expressao -> expressao INCREMENT
Rule 90    expressao -> expressao DECREMENT
Rule 91    expressao -> chamada_funcao
Rule 92    termo -> fator
Rule 93    termo -> termo TIMES fator
Rule 94    termo -> termo DIVIDE fator
Rule 95    termo -> termo MOD fator
Rule 96    termo -> termo LSHIFT fator
Rule 97    termo -> termo RSHIFT fator
Rule 98    fator -> INTEGER
Rule 99    fator -> FLOAT_NUMBER
Rule 100   fator -> STRING
Rule 101   fator -> ID
Rule 102   fator -> ID INCREMENT
Rule 103   fator -> ID DECREMENT
Rule 104   fator -> LPAREN expressao RPAREN
Rule 105   if_instrucao -> IF fator instrucao
Rule 106   if_instrucao -> IF fator instrucao ELSE instrucao
Rule 107   while_instrucao -> WHILE fator instrucao
Rule 108   for_instrucao -> FOR LPAREN declaracao expressao SEMICOLON expressao RPAREN instrucao
Rule 109   for_instrucao -> FOR LPAREN expressao SEMICOLON expressao SEMICOLON expressao RPAREN instrucao
Rule 110   switch_instrucao -> SWITCH fator LBRACE lista_case default_case RBRACE
Rule 111   lista_case -> case
Rule 112   lista_case -> lista_case case
Rule 113   lista_case -> vazio
Rule 114   case -> CASE expressao COLON lista_instrucoes
Rule 115   default_case -> DEFAULT COLON lista_instrucoes
Rule 116   default_case -> vazio
Rule 117   break_instrucao -> BREAK SEMICOLON
Rule 118   continue_instrucao -> CONTINUE SEMICOLON
Rule 119   return_instrucao -> RETURN expressao SEMICOLON
Rule 120   chamada_funcao -> ID LPAREN RPAREN
Rule 121   chamada_funcao -> ID LPAREN lista_argumentos RPAREN
Rule 122   lista_argumentos -> expressao
Rule 123   lista_argumentos -> lista_argumentos COMMA expressao
Rule 124   vazio -> <empty>

Terminals, with rules where they appear

AND                  : 86
ARROW                : 
AUTO                 : 65
BITWISE_AND          : 83
BITWISE_NOT          : 
BITWISE_OR           : 84
BITWISE_XOR          : 85
BREAK                : 117
CASE                 : 114
CHAR                 : 60
COLON                : 114 115
COMMA                : 20 49 54 123
COMPARATOR           : 82
CONST                : 64
CONTINUE             : 118
DECREMENT            : 90 103
DEFAULT              : 115
DEFINE               : 8 9
DIVIDE               : 94
DOT                  : 88
DOUBLE               : 62
DOUBLEHASH           : 
ELSE                 : 106
ENUM                 : 
EQUALS               : 51 52 73
FLOAT                : 61
FLOAT_NUMBER         : 99
FOR                  : 108 109
GE                   : 80
GT                   : 79
HASH                 : 7 8 9
ID                   : 8 9 16 17 22 42 45 46 50 51 52 56 57 73 88 101 102 103 120 121
IF                   : 105 106
INCLUDE              : 7
INCREMENT            : 89 102
INT                  : 59
INTEGER              : 98
LBRACE               : 23 42 52 110
LBRACKET             : 
LE                   : 78
LIBRARY              : 7
LONG                 : 71
LPAREN               : 16 17 18 104 108 109 120 121
LSHIFT               : 96
LT                   : 77
MAIN                 : 18
MINUS                : 76
MOD                  : 95
NE                   : 81
NEWLINE              : 
NOT                  : 
OR                   : 87
PLUS                 : 75
POWER                : 
RBRACE               : 23 42 52 110
RBRACKET             : 
REGISTER             : 67
RETURN               : 119
RPAREN               : 16 17 18 104 108 109 120 121
RSHIFT               : 97
SEMICOLON            : 32 37 38 42 45 73 108 109 109 117 118 119
SHORT                : 70
SIZEOF               : 
STATIC               : 68
STRING               : 100
STRUCT               : 42
SWITCH               : 110
TERNARY              : 
TIMES                : 93
TYPEDEF              : 41
UNSIGNED             : 69
VOID                 : 63
VOLATILE             : 66
WHILE                : 107
error                : 

Nonterminals, with rules where they appear

atribuicao           : 27
break_instrucao      : 33
case                 : 111 112
chamada_funcao       : 32 91
continue_instrucao   : 34
declaracao           : 11 26 108
declaracao_chaves    : 16 17 18 31
declaracao_struct    : 40 41
default_case         : 110
define_diretiva      : 6
diretiva_preprocessador : 4
diretiva_preprocessador_opcional : 1
expressao            : 8 37 51 53 54 73 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 104 108 108 109 109 109 114 119 122 123
fator                : 92 93 94 95 96 97 105 106 107 110
for_instrucao        : 35
funcao               : 13 14
funcao_main          : 15
id_opcional          : 42
if_instrucao         : 28
include_diretiva     : 5
init_declarador      : 48 49
init_lista_declarador : 38 49
instrucao            : 24 25 105 106 106 107 108 109
lista_argumentos     : 121 123
lista_case           : 110 112
lista_declaracao     : 10 11
lista_declaracao_opcional : 1
lista_diretiva_preprocessador : 2
lista_funcoes        : 1 14
lista_inicializador  : 52 54
lista_instrucoes     : 23 25 114 115
lista_parametros     : 16 20
parametro            : 19 20
programa             : 0
return_instrucao     : 30
struct_membro        : 43 44
struct_membros       : 42 44
switch_instrucao     : 36
termo                : 74 75 76 77 78 79 80 81 82 83 84 85 86 87 93 94 95 96 97
tipo_especificador   : 16 17 18 22 38 45
tipo_especificador_nao_vazio : 55 56
tipo_previo_especificador : 58
tipos_base           : 55
typedef_declaracao   : 39
vazio                : 3 12 21 47 72 113 116
while_instrucao      : 29

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . diretiva_preprocessador_opcional lista_declaracao_opcional lista_funcoes
    (2) diretiva_preprocessador_opcional -> . lista_diretiva_preprocessador
    (3) diretiva_preprocessador_opcional -> . vazio
    (4) lista_diretiva_preprocessador -> . diretiva_preprocessador
    (124) vazio -> .
    (5) diretiva_preprocessador -> . include_diretiva
    (6) diretiva_preprocessador -> . define_diretiva
    (7) include_diretiva -> . HASH INCLUDE LIBRARY
    (8) define_diretiva -> . HASH DEFINE ID expressao
    (9) define_diretiva -> . HASH DEFINE ID

    ID              reduce using rule 124 (vazio -> .)
    CONST           reduce using rule 124 (vazio -> .)
    AUTO            reduce using rule 124 (vazio -> .)
    VOLATILE        reduce using rule 124 (vazio -> .)
    REGISTER        reduce using rule 124 (vazio -> .)
    STATIC          reduce using rule 124 (vazio -> .)
    UNSIGNED        reduce using rule 124 (vazio -> .)
    SHORT           reduce using rule 124 (vazio -> .)
    LONG            reduce using rule 124 (vazio -> .)
    INT             reduce using rule 124 (vazio -> .)
    CHAR            reduce using rule 124 (vazio -> .)
    FLOAT           reduce using rule 124 (vazio -> .)
    DOUBLE          reduce using rule 124 (vazio -> .)
    VOID            reduce using rule 124 (vazio -> .)
    TYPEDEF         reduce using rule 124 (vazio -> .)
    STRUCT          reduce using rule 124 (vazio -> .)
    HASH            shift and go to state 8

    programa                       shift and go to state 1
    diretiva_preprocessador_opcional shift and go to state 2
    lista_diretiva_preprocessador  shift and go to state 3
    vazio                          shift and go to state 4
    diretiva_preprocessador        shift and go to state 5
    include_diretiva               shift and go to state 6
    define_diretiva                shift and go to state 7

state 1

    (0) S' -> programa .



state 2

    (1) programa -> diretiva_preprocessador_opcional . lista_declaracao_opcional lista_funcoes
    (10) lista_declaracao_opcional -> . lista_declaracao
    (11) lista_declaracao -> . lista_declaracao declaracao
    (12) lista_declaracao -> . vazio
    (124) vazio -> .

    ID              reduce using rule 124 (vazio -> .)
    TYPEDEF         reduce using rule 124 (vazio -> .)
    STRUCT          reduce using rule 124 (vazio -> .)
    CONST           reduce using rule 124 (vazio -> .)
    AUTO            reduce using rule 124 (vazio -> .)
    VOLATILE        reduce using rule 124 (vazio -> .)
    REGISTER        reduce using rule 124 (vazio -> .)
    STATIC          reduce using rule 124 (vazio -> .)
    UNSIGNED        reduce using rule 124 (vazio -> .)
    SHORT           reduce using rule 124 (vazio -> .)
    LONG            reduce using rule 124 (vazio -> .)
    INT             reduce using rule 124 (vazio -> .)
    CHAR            reduce using rule 124 (vazio -> .)
    FLOAT           reduce using rule 124 (vazio -> .)
    DOUBLE          reduce using rule 124 (vazio -> .)
    VOID            reduce using rule 124 (vazio -> .)

    lista_declaracao_opcional      shift and go to state 9
    lista_declaracao               shift and go to state 10
    vazio                          shift and go to state 11

state 3

    (2) diretiva_preprocessador_opcional -> lista_diretiva_preprocessador .

    ID              reduce using rule 2 (diretiva_preprocessador_opcional -> lista_diretiva_preprocessador .)
    CONST           reduce using rule 2 (diretiva_preprocessador_opcional -> lista_diretiva_preprocessador .)
    AUTO            reduce using rule 2 (diretiva_preprocessador_opcional -> lista_diretiva_preprocessador .)
    VOLATILE        reduce using rule 2 (diretiva_preprocessador_opcional -> lista_diretiva_preprocessador .)
    REGISTER        reduce using rule 2 (diretiva_preprocessador_opcional -> lista_diretiva_preprocessador .)
    STATIC          reduce using rule 2 (diretiva_preprocessador_opcional -> lista_diretiva_preprocessador .)
    UNSIGNED        reduce using rule 2 (diretiva_preprocessador_opcional -> lista_diretiva_preprocessador .)
    SHORT           reduce using rule 2 (diretiva_preprocessador_opcional -> lista_diretiva_preprocessador .)
    LONG            reduce using rule 2 (diretiva_preprocessador_opcional -> lista_diretiva_preprocessador .)
    INT             reduce using rule 2 (diretiva_preprocessador_opcional -> lista_diretiva_preprocessador .)
    CHAR            reduce using rule 2 (diretiva_preprocessador_opcional -> lista_diretiva_preprocessador .)
    FLOAT           reduce using rule 2 (diretiva_preprocessador_opcional -> lista_diretiva_preprocessador .)
    DOUBLE          reduce using rule 2 (diretiva_preprocessador_opcional -> lista_diretiva_preprocessador .)
    VOID            reduce using rule 2 (diretiva_preprocessador_opcional -> lista_diretiva_preprocessador .)
    TYPEDEF         reduce using rule 2 (diretiva_preprocessador_opcional -> lista_diretiva_preprocessador .)
    STRUCT          reduce using rule 2 (diretiva_preprocessador_opcional -> lista_diretiva_preprocessador .)


state 4

    (3) diretiva_preprocessador_opcional -> vazio .

    ID              reduce using rule 3 (diretiva_preprocessador_opcional -> vazio .)
    CONST           reduce using rule 3 (diretiva_preprocessador_opcional -> vazio .)
    AUTO            reduce using rule 3 (diretiva_preprocessador_opcional -> vazio .)
    VOLATILE        reduce using rule 3 (diretiva_preprocessador_opcional -> vazio .)
    REGISTER        reduce using rule 3 (diretiva_preprocessador_opcional -> vazio .)
    STATIC          reduce using rule 3 (diretiva_preprocessador_opcional -> vazio .)
    UNSIGNED        reduce using rule 3 (diretiva_preprocessador_opcional -> vazio .)
    SHORT           reduce using rule 3 (diretiva_preprocessador_opcional -> vazio .)
    LONG            reduce using rule 3 (diretiva_preprocessador_opcional -> vazio .)
    INT             reduce using rule 3 (diretiva_preprocessador_opcional -> vazio .)
    CHAR            reduce using rule 3 (diretiva_preprocessador_opcional -> vazio .)
    FLOAT           reduce using rule 3 (diretiva_preprocessador_opcional -> vazio .)
    DOUBLE          reduce using rule 3 (diretiva_preprocessador_opcional -> vazio .)
    VOID            reduce using rule 3 (diretiva_preprocessador_opcional -> vazio .)
    TYPEDEF         reduce using rule 3 (diretiva_preprocessador_opcional -> vazio .)
    STRUCT          reduce using rule 3 (diretiva_preprocessador_opcional -> vazio .)


state 5

    (4) lista_diretiva_preprocessador -> diretiva_preprocessador .

    ID              reduce using rule 4 (lista_diretiva_preprocessador -> diretiva_preprocessador .)
    CONST           reduce using rule 4 (lista_diretiva_preprocessador -> diretiva_preprocessador .)
    AUTO            reduce using rule 4 (lista_diretiva_preprocessador -> diretiva_preprocessador .)
    VOLATILE        reduce using rule 4 (lista_diretiva_preprocessador -> diretiva_preprocessador .)
    REGISTER        reduce using rule 4 (lista_diretiva_preprocessador -> diretiva_preprocessador .)
    STATIC          reduce using rule 4 (lista_diretiva_preprocessador -> diretiva_preprocessador .)
    UNSIGNED        reduce using rule 4 (lista_diretiva_preprocessador -> diretiva_preprocessador .)
    SHORT           reduce using rule 4 (lista_diretiva_preprocessador -> diretiva_preprocessador .)
    LONG            reduce using rule 4 (lista_diretiva_preprocessador -> diretiva_preprocessador .)
    INT             reduce using rule 4 (lista_diretiva_preprocessador -> diretiva_preprocessador .)
    CHAR            reduce using rule 4 (lista_diretiva_preprocessador -> diretiva_preprocessador .)
    FLOAT           reduce using rule 4 (lista_diretiva_preprocessador -> diretiva_preprocessador .)
    DOUBLE          reduce using rule 4 (lista_diretiva_preprocessador -> diretiva_preprocessador .)
    VOID            reduce using rule 4 (lista_diretiva_preprocessador -> diretiva_preprocessador .)
    TYPEDEF         reduce using rule 4 (lista_diretiva_preprocessador -> diretiva_preprocessador .)
    STRUCT          reduce using rule 4 (lista_diretiva_preprocessador -> diretiva_preprocessador .)


state 6

    (5) diretiva_preprocessador -> include_diretiva .

    ID              reduce using rule 5 (diretiva_preprocessador -> include_diretiva .)
    CONST           reduce using rule 5 (diretiva_preprocessador -> include_diretiva .)
    AUTO            reduce using rule 5 (diretiva_preprocessador -> include_diretiva .)
    VOLATILE        reduce using rule 5 (diretiva_preprocessador -> include_diretiva .)
    REGISTER        reduce using rule 5 (diretiva_preprocessador -> include_diretiva .)
    STATIC          reduce using rule 5 (diretiva_preprocessador -> include_diretiva .)
    UNSIGNED        reduce using rule 5 (diretiva_preprocessador -> include_diretiva .)
    SHORT           reduce using rule 5 (diretiva_preprocessador -> include_diretiva .)
    LONG            reduce using rule 5 (diretiva_preprocessador -> include_diretiva .)
    INT             reduce using rule 5 (diretiva_preprocessador -> include_diretiva .)
    CHAR            reduce using rule 5 (diretiva_preprocessador -> include_diretiva .)
    FLOAT           reduce using rule 5 (diretiva_preprocessador -> include_diretiva .)
    DOUBLE          reduce using rule 5 (diretiva_preprocessador -> include_diretiva .)
    VOID            reduce using rule 5 (diretiva_preprocessador -> include_diretiva .)
    TYPEDEF         reduce using rule 5 (diretiva_preprocessador -> include_diretiva .)
    STRUCT          reduce using rule 5 (diretiva_preprocessador -> include_diretiva .)


state 7

    (6) diretiva_preprocessador -> define_diretiva .
